src/test/deca/context/invalid/custom/option/java/java2.deca
class TestJava {
    void methodJava() javac("  WSTR \"toto\"");

    void methodJava2() java("  WSTR \"toto\"");
}
{
    TestJava test = new TestJava();
    test.methodJava();
    test.methodJava2();
}